# retrain

./: .gitignore  .gitmodules  .readthedocs.yaml  Makefile  README.md  mcp_alchemy_config.json  mcp_alchemy_postgres_config.json  mcp_alchemy_snowflake_config.json  mcp_alchemy_sqlite_config.json  mkdocs.yml  ordeal-report.json  ordeal.toml  pixi.toml  pyproject.toml  retrain.toml  setup_dev_env.sh  start_spider2_training.py
.ordeal/: test_diff_migrated.py  test_retrain_migrated.py  test_rewards_migrated.py
campaigns/: EXPERIMENT_THESIS.md  RALPH_PROMPT.md  SEPA_EXPERIMENTS.md  clip-rescue.toml  delight-fixed-lambda.toml  delight-gate-state.md  delight-gate.toml  delight-scale-kimi.toml  delight-scale-nemotron.toml  delight-scale-qwen235b.toml  delight-scale-qwen4b.toml  delight-scale-test.toml  delight_pipeline.py  energy-rl-turn64-max4096-g2.toml  energy-rl.toml  energy-sft.toml  energy_pipeline.py  entropy-mask-yue-30b.toml  entropy-mask-yue.toml  full.toml  grad-clip.toml  grpo-baseline-4b.toml  hard-delight-kimi.toml  hard-delight-nemotron.toml  hard-delight-scale.toml  lr-sweep.toml  maxrl-paper.toml  maxrl-sweep.toml  pilot.toml  ppo-clip.toml  ppo-dualclip.toml  pred-var-vs-surprisal.toml  qwen35-2b-unsloth-sft.toml  ralph_state.json  sepa-ablation-s101.toml  sepa-ablation-s202.toml  sepa-ablation.toml  sepa-amplify-amp-c.toml  sepa-amplify-amp.toml  sepa-amplify-smoke.toml  (+16 more)
docs/: advantages.md  backends.md  backpressure.md  campaigns.md  capacity-planning.md  configuration.md  echo-training.md  getting-started.md  grpo_new_file_structure.md  grpo_refactoring_plan.md  guide.md  index.md  inference-engines.md  inference_engines.md  logging.md  optimizer-batch-replay.md  plugins.md  research-guide.md  rewards.md  scaleway-backend-design.md  scaleway-implementation-status.md  sepa.md  slime_integration.md  squeeze.md  tinker-forecasting-note.md  tree.md
examples/: README.md  advanced_grpo_config.yaml  advanced_grpo_with_hardware_detection.py  distributed_training_example.py  fastmcp_example_config.yaml  hardware_optimization_example.py  quick_demo.py  run_example.py  run_fastmcp_example.py  sample_fastmcp_server.py  simple_grpo_config.yaml  simple_refactored_example.py  slime_bridge_config.yaml  slime_bridge_example.py  slime_grpo_config.yaml  unsloth_lora_example.py  working_macos_example.py
experiments/: adam_invariance_test.py
retrain/: __init__.py  _hf_transfer.py  accelerators.py  advantages.py  backend_definitions.py  backends.py  backpressure.py  benchmark.py  campaign.py  cli.py  config.py  config_models.py  data.py  delight_campaign_summary.py  diff.py  echo.py  fast_lora.py  flow.py  gemma4_text.py  json_utils.py  local_train_helper.py  logging_utils.py  man_export.py  max_train_helper.py  metrics_scan.py  planning.py  plugin_resolver.py  run.py  (+29 more)
(+56437 files in other folders)
